TypeaheadSelect component fixes/additions
- Added documentation
- Fixed IE error

--- a/docs/components/typeaheadselect.html
+++ b/docs/components/typeaheadselect.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>What's New - Getting started - ridestyler.ui CSS Framework</title>
+    <title>Typeahead Select - Components - ridestyler.ui CSS Framework</title>
     <meta charset="utf-8">
     <meta name="robots" content="index, follow">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <meta name="description" content="ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development. ridestyler.ui provides basic styles for typography and elements, flexbox based responsive layout system, pure CSS components and utilities with best practice coding and consistent design language.">
+    <meta name="description" content="Typeahead Select is a searchable select component. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
     <meta name="author" content="Byron Carasco">
-    <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/getting-started/whatsnew.html">
-    <meta property="og:title" content="What's New - Getting started - ridestyler.ui CSS Framework">
-    <meta property="og:description" content="ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development. ridestyler.ui provides basic styles for typography and elements, flexbox based responsive layout system, pure CSS components and utilities with best practice coding and consistent design language.">
+    <meta property="og:url" content="https://burkson.github.io/ridestyler.ui/components/typeaheadselect.html">
+    <meta property="og:title" content="Typeahead Select - Components - ridestyler.ui CSS Framework">
+    <meta property="og:description" content="Typeahead Select is a searchable select component. ridestyler.ui CSS Framework is a lightweight, responsive and modern CSS framework for faster and extensible development.">
     <link rel="shortcut icon" href="../img/favicons/favicon.ico">
     <link rel="icon" href="../img/favicons/favicon.png">
     <link rel="stylesheet" href="../dist/rsui.min.css">
@@ -33,7 +33,7 @@
         <div class="docs-nav">
           <div class="accordion-container">
             <div class="accordion">
-              <input id="accordion-getting-started" type="checkbox" name="docs-accordion-checkbox" hidden="" checked="checked"/>
+              <input id="accordion-getting-started" type="checkbox" name="docs-accordion-checkbox" hidden=""/>
               <label class="accordion-header c-hand" for="accordion-getting-started">Getting started</label>
               <div class="accordion-body">
                 <ul class="menu menu-nav">
@@ -95,7 +95,7 @@
               </div>
             </div>
             <div class="accordion">
-              <input id="accordion-components" type="checkbox" name="docs-accordion-checkbox" hidden=""/>
+              <input id="accordion-components" type="checkbox" name="docs-accordion-checkbox" hidden="" checked="checked"/>
               <label class="accordion-header c-hand" for="accordion-components">Components</label>
               <div class="accordion-body">
                 <ul class="menu menu-nav">
@@ -175,176 +175,22 @@
       </div><a class="off-canvas-overlay" href="#close"></a>
       <div class="off-canvas-content">
         <div class="docs-content container grid-xl" id="content">
-          <div class="container" id="whatsnew">
-            <h3 class="s-title">What's new<a class="anchor" href="#whatsnew" aria-hidden="true">#</a></h3><h1>ridestyler.ui Changelog</h1>
-<p>All notable changes to this project will be documented in this file.</p>
-<p>The format is based on <a href="https://keepachangelog.com/en/1.0.0/">Keep a Changelog</a>,
-and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semantic Versioning</a>.</p>
-<h2>[1.5.10] - 2020-6-2</h2>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>Fixed TypeaheadSelect IE error</li>
-<li>Added TypeaheadSelect documentation</li>
-</ul>
-<h2>[1.5.9] - 2020-5-28</h2>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>Updated TypeaheadSelect component to support up/down arrows</li>
-</ul>
-<h2>[1.5.8] - 2021-5-26</h2>
-<p><strong>Added</strong>:</p>
-<ul>
-<li>Added TypeaheadSelect component</li>
-</ul>
-<h2>[1.5.7] - 2020-9-9</h2>
-<p><strong>Fixes</strong>:</p>
-<ul>
-<li>Fixes bug in styling on BrandedNavColumn component</li>
-</ul>
-<h2>[1.5.6] - 2020-7-17</h2>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>Updated styling on BrandedNavColumn component</li>
-</ul>
-<h2>[1.5.5] - 2020-17-9</h2>
-<p><strong>Fixed</strong>:</p>
-<ul>
-<li>Fixes responsive styling on the BrandedNavColumn component</li>
-</ul>
-<h2>[1.5.4] - 2020-17-9</h2>
-<p><strong>Fixed</strong>:</p>
-<ul>
-<li>Fixes styling on the BrandedNavColumn component</li>
-</ul>
-<h2>[1.5.3] - 2020-17-9</h2>
-<p><strong>Added</strong>:</p>
-<ul>
-<li>Adds styling to the BrandedNavColumn component</li>
-</ul>
-<h2>[1.5.2] - 2020-16-9</h2>
-<p><strong>Added</strong>:</p>
-<ul>
-<li>Added BrandedNavColumn component</li>
-</ul>
-<h2>[1.5.1] - 2020-15-9</h2>
-<p><strong>Fixed</strong>:</p>
-<ul>
-<li>Fixes ToggleNav bug</li>
-</ul>
-<h2>[1.5.0] - 2020-6-9</h2>
-<p><strong>Fixed</strong>:</p>
-<ul>
-<li>Fixes ToggleNav bug</li>
-</ul>
-<h2>[1.4.9] - 2020-6-9</h2>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>Adds ToggleNav component</li>
-</ul>
-<h2>[1.4.8] - 2020-4-22</h2>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>Updated accordion style</li>
-</ul>
-<h2>[1.4.7] - 2020-5-19</h2>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>Updated all inputs to use a rounded border</li>
-</ul>
-<h2>[1.4.6] - 2020-2-5</h2>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>Updated all of the old static.ridestyler.net references</li>
-</ul>
-<h2>[1.4.5] - 2020-1-31</h2>
-<p><strong>Added</strong>:</p>
-<ul>
-<li>Added borders to all popovers</li>
-</ul>
-<h2>[1.4.4] - 2020-1-27</h2>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>The BrandedNavbarMenu component's initial check for the user's ready state</li>
-</ul>
-<h2>[1.4.3] - 2020-1-13</h2>
-<p><strong>Added</strong>:</p>
-<ul>
-<li>Call to wait for ridestyler user ready on BrandedNavbarMenu</li>
-</ul>
-<h2>[1.4.2] - 2020-1-13</h2>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>The BrandedNavbarMenu component to no longer take user props</li>
-</ul>
-<h2>[1.4.1] - 2020-1-13</h2>
-<p><strong>Fixed</strong>:</p>
-<ul>
-<li>A bug with the branded navbar menu component</li>
-</ul>
-<h2>[1.4.0] - 2020-1-13</h2>
-<p><strong>Added</strong>:</p>
-<ul>
-<li>New rsui custom components, including branded navbar menu</li>
-</ul>
-<h2>[1.3.0] - 2019-12-17</h2>
-<p><strong>Fixed</strong>:</p>
-<ul>
-<li>A bug with the modal positioning on IE</li>
-<li>Added a build of just the icons to the framework</li>
-</ul>
-<h2>[1.2.0] - 2019-11-19</h2>
-<p><strong>Fixed</strong>:</p>
-<ul>
-<li>Margin for the buttons and links in the modals have been moved from the right, to the left. Let's hope they stay there.</li>
-<li><code>.btn</code> elements with a <code>loading</code> class will now have more transparent text</li>
-</ul>
-<p><strong>Added</strong>:</p>
-<ul>
-<li>Padding for the breakpoints <code>md</code>, <code>sm</code> and <code>xs</code> have been set to <code>$unit-1</code>, <code>$unit-2</code> and <code>$unit-3</code> respectively. Default padding is currently <code>$unit-8</code>.</li>
-</ul>
-<p><strong>Updated</strong>:</p>
-<ul>
-<li>The default <code>.btn</code> text color now matches the body color. This makes it look less disabled.</li>
-</ul>
-<h2>[1.1.0] - 2019-11-18</h2>
-<p><strong>Added</strong>:</p>
-<ul>
-<li>Pointer cursor to switches, radios and checkboxes</li>
-<li><a href="../../utilities/loading.html">Loading utilities</a> for <code>form</code>, <code>.container</code> and <code>.column</code> elements</li>
-<li><code>.disabled</code> class for links</li>
-<li><code>.btn-success</code> &amp; <code>.btn-error</code> button styles</li>
-<li><code>equal-height-columns</code> class for <code>.columns</code> to make columns equal height</li>
-<li><a href="../../elements/tables.html#tables-mini">Mini-tables</a></li>
-<li><a href="../../components/menu.html#menu-sidebar">Sidebar menus</a></li>
-</ul>
-<p><strong>Fixed</strong>:</p>
-<ul>
-<li>Element spacing on navbar</li>
-<li>Sidebar links padding &amp; highlighting</li>
-<li>Menu &amp; dropdown menu width</li>
-<li>Spacing for buttons and links in card footers</li>
-<li>Font color on when the entire .card-action was a link</li>
-<li><code>.d-*</code> rule priority</li>
-<li>Styling of checkboxes, switches and radio elements</li>
-<li>Navbar images to be served over HTTPS</li>
-<li>Navbar would appear under some elements (increased z-index)</li>
-</ul>
-<p><strong>Updates</strong>:</p>
-<ul>
-<li>Button text is now smaller</li>
-<li>Outline for links is now less obtrusive (dotted, matching font color)</li>
-<li>Horizontal container padding now matches vertical</li>
-<li>Inputs are now prettier, with a cleaned up border style</li>
-<li>Text selection color now matches marketing website</li>
-<li><code>html</code>, <code>body</code> elements now have margin/padding removed by default</li>
-<li>The badges have been updated to better match brand spacing and one-corner border-radius style</li>
-<li>Dropdown style (removed shadow)</li>
-<li>Headers are now no longer upper-case</li>
-</ul>
-<h2>[1.0.0] - 2019-10-30</h2>
-<p>Initial release.</p>
-
-            <p><a class="btn btn-primary" href="https://github.com/Burkson/ridestyler.ui/releases" target="_blank">Releases</a></p>
+          <div class="container" id="typeaheadselect">
+            <h3 class="s-title">Typeahead Select<a class="anchor" href="#typeaheadselect" aria-hidden="true">#</a></h3>
+            <p>Typeahead Select is a searchable select component. Behaves like a select component with searching for filtering.</p>
+            <h4 class="s-subtitle" id="demo">Demo<a class="anchor" href="#demo" aria-hidden="true">#</a></h4>
+            <div class="select" id="typeahead-select-demo"></div>
+            <p>Just like a <code>select</code> element, the data submitted to the server will be the underlying value, not what the user sees. In this case, it's the abbreviation of the US state.</p>
+            <h4 class="s-subtitle" id="usage">Usage<a class="anchor" href="#usage" aria-hidden="true">#</a></h4>
+            <pre class="code" data-lang="HTML"><code><span class="hljs-tag">&lt;<span class="hljs-name">TypeaheadSelect</span> 
+  <span class="hljs-attr">v-bind:name</span>=<span class="hljs-string">"'pricing-group'"</span>
+  <span class="hljs-attr">v-bind:keyValues</span>=<span class="hljs-string">"keyValuesArray"</span> 
+  <span class="hljs-attr">v-on:itemSelected</span>=<span class="hljs-string">"itemSelectedEventHandler"</span> 
+/&gt;</span>
+</code></pre>
+            <p>The TypeaheadSelect component takes 3 properties. <code>keyValuesArray</code> is the array of items you want to populate the component with. <code>itemSelectedEventHandler</code> is the method where you would respond to when an item is selected. <code>pricing-group</code> is the name of the <code>input</code> so you can handle that on the server.</p>
+            <p>
+               For more details on including RS Custom Components, refer to <a href="../getting-started/javascript.html">JavaScript section</a>.</p>
           </div>
           <div class="docs-footer container grid-lg" id="copyright">
             <p><a href="https://github.com/Burkson/ridestyler.ui" target="_blank">GitHub</a> · <a href="https://ridestyler.com" target="_blank">RideStyler</a> · Version <span class="version"></span></p>
@@ -357,3 +203,70 @@ and this project adheres to <a href="https://semver.org/spec/v2.0.0.html">Semant
     <script src="../dist/components/rsui.umd.js" type="text/javascript"></script>
   </body>
 </html>
+<script>
+  var v = new Vue({
+    extends: rsui.components.TypeaheadSelect,
+    class: "select",
+    propsData: { 
+     name: "state",
+     keyValues: [
+       { key: "AL", value: "Alabama" },
+       { key: "AK", value: "Alaska" },
+       { key: "AZ", value: "Arizona" },
+       { key: "AR", value: "Arkansas" },
+       { key: "CA", value: "California" },
+       { key: "CO", value: "Colorado" },
+       { key: "CT", value: "Connecticut" },
+       { key: "DE", value: "Delaware" },
+       { key: "DC", value: "District Of Columbia" },
+       { key: "FL", value: "Florida" },
+       { key: "GA", value: "Georgia" },
+       { key: "GU", value: "Guam" },
+       { key: "HI", value: "Hawaii" },
+       { key: "ID", value: "Idaho" },
+       { key: "IL", value: "Illinois" },
+       { key: "IN", value: "Indiana" },
+       { key: "IA", value: "Iowa" },
+       { key: "KS", value: "Kansas" },
+       { key: "KY", value: "Kentucky" },
+       { key: "LA", value: "Louisiana" },
+       { key: "ME", value: "Maine" },
+       { key: "MD", value: "Maryland" },
+       { key: "MA", value: "Massachusetts" },
+       { key: "MI", value: "Michigan" },
+       { key: "MN", value: "Minnesota" },
+       { key: "MS", value: "Mississippi" },
+       { key: "MO", value: "Missouri" },
+       { key: "MT", value: "Montana" },
+       { key: "NE", value: "Nebraska" },
+       { key: "NV", value: "Nevada" },
+       { key: "NH", value: "New Hampshire" },
+       { key: "NJ", value: "New Jersey" },
+       { key: "NM", value: "New Mexico" },
+       { key: "NY", value: "New York" },
+       { key: "NC", value: "North Carolina" },
+       { key: "ND", value: "North Dakota" },
+       { key: "OH", value: "Ohio" },
+       { key: "OK", value: "Oklahoma" },
+       { key: "OR", value: "Oregon" },
+       { key: "PA", value: "Pennsylvania" },
+       { key: "PR", value: "Puerto Rico" },
+       { key: "RI", value: "Rhode Island" },
+       { key: "SC", value: "South Carolina" },
+       { key: "SD", value: "South Dakota" },
+       { key: "TN", value: "Tennessee" },
+       { key: "TX", value: "Texas" },
+       { key: "UT", value: "Utah" },
+       { key: "VT", value: "Vermont" },
+       { key: "VA", value: "Virginia" },
+       { key: "WA", value: "Washington" },
+       { key: "WV", value: "West Virginia" },
+       { key: "WI", value: "Wisconsin" },
+       { key: "WY", value: "Wyoming" }
+     ]
+    },
+    el: '#typeahead-select-demo'
+  });
+  v.$on('itemSelected', function(item) { console.log('Selected: ' + item) });
+  console.log(v.$el);
+</script>
