--- a/docs/src/_layout/_docs-layout.pug
+++ b/docs/src/_layout/_docs-layout.pug
@@ -78,7 +78,8 @@ block content
             {url: 'tabs', name: 'Tabs'},
             {url: 'tiles', name: 'Tiles'},
             {url: 'toasts', name: 'Toasts'},
-            {url: 'tooltips', name: 'Tooltips'}
+            {url: 'tooltips', name: 'Tooltips'},
+            {url: 'typeaheadselect', name: 'Typeahead Select'}
           )
           +docs-accordion(
             'utilities',
