Adjust elements for a more reusable design #22
- Adjust RideStyler UI btn-sm class to be a small button.
- Add blue down arrow to form-select class in UI.
- Make buttons have rounded corners on all sides

--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -4,10 +4,7 @@
 
 	appearance: none;
 	border: none;
-	border-top-right-radius: $border-radius;
-	border-top-left-radius: $border-radius;
-	border-bottom-left-radius: $border-radius;
-	border-bottom-right-radius: 0;
+	border-radius: $border-radius;
 	cursor: pointer;
 	display: inline-block;
 	font-weight: bold;
