--- a/src/_forms.scss
+++ b/src/_forms.scss
@@ -151,6 +151,17 @@ textarea.form-input {
 			padding: $unit-h $unit-1;
 		}
 	}
+	&:not([multiple]) {
+		appearance: none;
+		padding-right: 2.8em;
+		overflow : hidden;
+		background: url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIGZpbGw9IiMyMUI4RjciIHdpZHRoPSIyNCIgaGVpZ2h0PSIyNCIgdmlld0JveD0iMCAwIDI0IDI0Ij48cGF0aCBkPSJNMTIgMjFsLTEyLTE4aDI0eiIvPjwvc3ZnPg==)  no-repeat;
+		background-size: .8em;
+		background-position: right 10px center;
+		&::-ms-expand {
+			display: none;
+		}
+	}
 }
 
 // Form Icons
