--- a/src/_buttons.scss
+++ b/src/_buttons.scss
@@ -161,3 +161,13 @@
 		}
 	}
 }
+
+
+.btn-group-spaced {
+	.btn {
+        margin-right: $unit-1;
+		&:last-child:not(:first-child) {
+			margin-right: 0;
+		}
+	}
+}
