Issue dropdown menus #21
- Added .menu:hover to maintain display:block

--- a/src/_dropdowns.scss
+++ b/src/_dropdowns.scss
@@ -24,10 +24,11 @@
 	}
 
 	&.active .menu,
-	.dropdown-toggle:focus+.menu {
+	.dropdown-toggle:focus + .menu,
+	.menu:hover {
 		display: block;
 	}
-
+	
 	// Fix dropdown-toggle border radius in button groups
 	.btn-group {
 		.dropdown-toggle:nth-last-child(2) {
