Adjust elements for a more reusable design #22
- Fixed typeahead so that menu always hides after item selection
- Updated docs to latest version

--- a/src/index.scss
+++ b/src/index.scss
@@ -46,6 +46,7 @@
 @import "toasts";
 @import "tooltips";
 @import "brand";
+@import "typeahead-select";
 
 // Utility classes
 @import "animations";
