--- a/src/_layout.scss
+++ b/src/_layout.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 // Layout
 @mixin containerSize($paddingX, $paddingY) {
   .container {
@@ -21,7 +23,7 @@
   margin-right: auto;
   width: 100%;
 
-  $grid-spacing: ($layout-spacing / ($layout-spacing * 0 + 1)) * $html-font-size;
+  $grid-spacing: math.div($layout-spacing, ($layout-spacing * 0 + 1)) * $html-font-size;
 
   &.grid-xl {
     max-width: $grid-spacing * 2 + $size-xl;
