--- a/src/_sliders.scss
+++ b/src/_sliders.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 // Sliders
 .slider {
 	appearance: none;
@@ -20,7 +22,7 @@
 		border: 0;
 		border-radius: 50%;
 		height: $unit-3;
-		margin-top: -($unit-3 - $unit-h) / 2;
+		margin-top: math.div(-($unit-3 - $unit-h), 2);
 		transition: transform .2s;
 		width: $unit-3;
 	}
